<resources>
    <string name="app_name">MyLibraryApp</string>
    <string name="Open">open</string>
    <string name="Close">close</string>

    <!-- Book Info Activity -->
    <string name="book_info_img">Book Cover</string>
    <string name="book_info_review">Read Reviews:</string>
    <string name="rev_item_user">Username</string>
    <string name="rev_item_date">date</string>
    <string name="rev_item_review">Review</string>
    <string name="rev_item_imgbut">Editable Review Icon</string>

    <!-- Review Activity -->
    <string name="review_book_header">Review Book</string>
    <string name="review_book_cover">Book Cover</string>
    <string name="review_book_title">Title</string>
    <string name="review_book_author">Author</string>
    <string name="review_book_prompt">Write review:</string>
    <string name="review_book_button">Submit</string>
    <string name="review_book_hint">My thoughts on this book are…</string>

    <!-- Edit Review Activity -->
    <string name="edit_review_header">Edit Review</string>

    <!-- Edit Book Details Activity -->
    <string name="edit_book_details_header">Edit Book Details</string>
    <string name="edit_ISBN_label">ISBN: </string>
    <string name="edit_ISBN_default">ISBN</string>
    <string name="edit_title_label">Title: </string>
    <string name="edit_title_default">Title</string>
    <string name="edit_author_label">Author: </string>
    <string name="edit_author_default">Author Name</string>
    <string name="edit_publisher_label">Publisher: </string>
    <string name="edit_publisher_default">Publisher Name</string>
    <string name="edit_year_label">Year: </string>
    <string name="edit_year_default">Year Published</string>
    <string name="edit_genre_label">Genre: </string>
    <string name="edit_genre_default">Genre of Book</string>
    <string name="edit_summary_label">Summary: </string>
    <string name="edit_summary_default">Book Summary</string>
    <string name="edit_qty_label">Quantity: </string>
    <string name="edit_qty_default">Qty in stock</string>
    <string name="edit_but_label">Submit</string>
    <string name="get_book">Get Book</string>

    <!-- Main Screen -->
    <string name="main_header">Active Rentals</string>

    <!-- Add book to DB -->
    <string name="addBookHeader">Add Book To DB</string>
    <string name="titleHint">Book Title (Required)</string>
    <string name="authorHint">Book Author (Required)</string>
    <string name="isbnHint">ISBN (Required)</string>
    <string name="publisherHint">Book publisher</string>
    <string name="genreHint">Book Genre</string>
    <string name="totQtyHint">Total Qty</string>
    <string name="publishedYearHint">Published Year</string>
    <string name="numPagesHint">Number Of Pages</string>
    <string name="summaryHint">Write Book Summary</string>
    <string name="buttonText">Save To DB</string>

    <!--Admin view-->
    <string name="adminMainHeader">Admin View</string>
    <string name="bAdminAddBook">Add Book</string>
    <string name="bAdminRemoveBook">Remove Book</string>
    <string name="lAdminEditBook">Edit Book</string>
    <string name="lViewAllRentals">View Rentals</string>
    <string name="lBookQty">Edit Book Qty</string>
    <string name="lBookRequests">View Requests</string>
    <string name="lViewUsers">View Users</string>

    <!-- View Users -->
    <string name="usr_header">View Users</string>

    <!-- User list item -->
    <string name="usr_item_uname">Username</string>
    <string name="usr_item_name">Full Name</string>
    <string name="usr_item_email">Email</string>
    <string name="usr_item_ID">(ID)</string>
    <string name="usr_item_phone">Phone #</string>

    <!-- Payments/fees activity -->
    <string name="pay_header">View Payments</string>
    <string name="pay_out">Outstanding</string>
    <string name="pay_hist">History</string>

    <!-- Payment list item -->
    <string name="pay_item_desc">Description</string>
    <string name="pay_item_date">Date Charged</string>
    <string name="pay_item_paid">Date Paid</string>
    <string name="pay_item_amt">Amount Paid</string>
    <string name="pay_item_due">Amount Due</string>

    <!-- Search field options -->
    <string-array name="search_fields">
        <item>Title</item>
        <item>Author</item>
    </string-array>

    <!-- Search genre options -->
    <string-array name="search_genres">
        <item>All</item>
        <item>Fiction</item>
        <item>Nonfiction</item>
        <item>Classics</item>
        <item>Fantasy</item>
        <item>Science Fiction</item>
        <item>Western</item>
    </string-array>

    <!-- Search order options -->
    <string-array name="search_orders">
        <item>Ascending</item>
        <item>Descending</item>
    </string-array>

    <!-- Rental List adapter-->
    <string name="lDueDate">Due Date</string>
    <string name="bRenewRental">Renew</string>

    <!--My Rentals-->
    <string name="myRetnals">My Rentals</string>
    <string name="bookName">Name</string>
    <string name="ReturnDate">Return Date</string>

    <!--Edit Book details-->
    <string name="getBook">Get Book</string>
    <string name="enterISBN">Enter ISBN and press Get Book</string>
    <string name="editBookbookTitle">Book Title</string>
    <string name="adminaAuthorName">Author</string>

    <!--Remove Book-->
    <string name="removeBook">Remove Book</string>
    <string name="hintISBN">Enter ISBN and press delete book</string>
    <string name="bDeleteBook">Delete Book</string>

    <!--Edit Book qty-->
    <string name="EditBookqQty">Edit Book Qty</string>
    <string name="aveQtyHint">Available Qty</string>
    <string name="openRentalQty">Open Rental Qty</string>
    <string name="editQtyAdd">Add</string>
    <string name="editQtyReduce">Remove</string>
    <string name="chooseOperation">Choose Operation:</string>
    <string name="qtyToAddOrRemove">Enter a qty to add or remove</string>
    <string name="adjustQty">Adjust Qty</string>


</resources>
