<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ControlObjects.EditBookDetailsActivity">

    <TextView
        android:id="@+id/edit_book_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="30dp"
        android:text="@string/edit_book_details_header"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/edit_book_isbn_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:labelFor="@id/edit_book_isbn_et"
        android:text="@string/edit_ISBN_label"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="20sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/edit_book_isbn_et"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/edit_book_isbn_et"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:singleLine="true"
        android:text="@string/edit_ISBN_default"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/edit_book_isbn_label"
        app:layout_constraintTop_toBottomOf="@+id/edit_book_header"
        android:importantForAutofill="no" />

    <TextView
        android:id="@+id/edit_book_title_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:labelFor="@id/edit_book_title_et"
        android:text="@string/edit_title_label"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="20sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/edit_book_title_et"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/edit_book_title_et"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:singleLine="true"
        android:text="@string/edit_title_default"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/edit_book_title_label"
        app:layout_constraintTop_toBottomOf="@+id/edit_book_isbn_et"
        android:importantForAutofill="no" />

    <TextView
        android:id="@+id/edit_book_author_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:labelFor="@id/edit_book_author_et"
        android:text="@string/edit_author_label"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="20sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/edit_book_author_et"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/edit_book_author_et"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:singleLine="true"
        android:text="@string/edit_author_default"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/edit_book_author_label"
        app:layout_constraintTop_toBottomOf="@+id/edit_book_title_et"
        android:importantForAutofill="no" />

    <TextView
        android:id="@+id/edit_book_publisher_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:labelFor="@id/edit_book_publisher_et"
        android:text="@string/edit_publisher_label"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="20sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/edit_book_publisher_et"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/edit_book_publisher_et"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:singleLine="true"
        android:text="@string/edit_publisher_default"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/edit_book_publisher_label"
        app:layout_constraintTop_toBottomOf="@+id/edit_book_author_et"
        android:importantForAutofill="no" />

    <TextView
        android:id="@+id/edit_book_year_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:labelFor="@id/edit_book_year_et"
        android:text="@string/edit_year_label"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="20sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/edit_book_year_et"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/edit_book_year_et"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:singleLine="true"
        android:text="@string/edit_year_default"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/edit_book_year_label"
        app:layout_constraintTop_toBottomOf="@+id/edit_book_publisher_et"
        android:importantForAutofill="no" />

    <TextView
        android:id="@+id/edit_book_genre_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:labelFor="@id/edit_book_genre_et"
        android:text="@string/edit_genre_label"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="20sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/edit_book_genre_et"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/edit_book_genre_et"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:singleLine="true"
        android:text="@string/edit_genre_default"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/edit_book_genre_label"
        app:layout_constraintTop_toBottomOf="@+id/edit_book_year_et"
        android:importantForAutofill="no" />

    <TextView
        android:id="@+id/edit_book_summary_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:labelFor="@id/edit_book_summary_et"
        android:text="@string/edit_summary_label"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="20sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/edit_book_summary_et"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/edit_book_summary_et"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:ems="10"
        android:gravity="start|top"
        android:importantForAutofill="no"
        android:inputType="textMultiLine"
        android:minLines="7"
        android:text="@string/edit_summary_default"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/edit_book_summary_label"
        app:layout_constraintTop_toBottomOf="@+id/edit_book_genre_et" />

    <TextView
        android:id="@+id/edit_book_quantity_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:labelFor="@id/edit_book_qty_et"
        android:text="@string/edit_qty_label"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="20sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/edit_book_qty_et"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/edit_book_qty_et"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:singleLine="true"
        android:text="@string/edit_qty_default"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/edit_book_quantity_label"
        app:layout_constraintTop_toBottomOf="@+id/edit_book_summary_et"
        android:importantForAutofill="no" />

    <Button
        android:id="@+id/edit_book_but"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:text="@string/edit_but_label"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_book_qty_et" />

</androidx.constraintlayout.widget.ConstraintLayout>