<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/usr_item_id_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/usr_item_ID"
            android:textStyle="italic"
            app:layout_constraintStart_toEndOf="@+id/usr_item_uname_txt"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/usr_item_uname_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/usr_item_uname"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@+id/usr_item_img"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/usr_item_fname_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/usr_item_name"
            app:layout_constraintStart_toEndOf="@+id/usr_item_img"
            app:layout_constraintTop_toBottomOf="@+id/usr_item_uname_txt" />

        <TextView
            android:id="@+id/usr_item_email_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/usr_item_email"
            app:layout_constraintStart_toEndOf="@+id/usr_item_img"
            app:layout_constraintTop_toBottomOf="@+id/usr_item_fname_txt" />

        <TextView
            android:id="@+id/usr_item_phone_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginBottom="8dp"
            android:text="@string/usr_item_phone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/usr_item_img"
            app:layout_constraintTop_toBottomOf="@+id/usr_item_email_txt" />

        <ImageView
            android:id="@+id/usr_item_img"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginStart="8dp"
            android:contentDescription="@string/rev_item_imgbut"
            android:tint="@color/colorPrimaryDark"
            android:tintMode="src_in"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_viewusers" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>